[package]
name = "vk-mem-3-erupt"
version = "0.6.0+708428c2-2023-02-02"
authors = ["Raven Szewczyk <git@eigenraven.me>", "Hindrik Stegenga <mail@hindrik.dev>", "Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust ffi bindings and idiomatic wrapper for AMD Vulkan Memory Allocator (VMA) using erupt."
homepage = "https://github.com/eigenraven/vk-mem-3-erupt"
repository = "https://github.com/eigenraven/vk-mem-3-erupt"
documentation = "https://docs.rs/vk-mem-3-erupt"
readme = "README.md"
keywords = ["vulkan", "vk", "erupt", "memory", "allocator"]
categories = ["api-bindings", "rendering", "rendering::engine", "rendering::graphics-api", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/include/vk_mem_alloc.h",
    "wrapper/vulkan/vk_platform.h",
    "wrapper/vulkan/vulkan_core.h",
    "wrapper/vulkan/vulkan.h",
    "wrapper/vma_lib.cpp",
]
edition = "2021"

[badges]
# travis-ci = { repository = "gwihlidal/vk-mem-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
erupt = "0.23.0"
bitflags = "1.3.2"
failure = { version = "0.1.8", optional = true }

[build-dependencies]
cc = "1.0.73"

[build-dependencies.bindgen]
version = "0.64.0"
optional = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = []
generate_bindings=["bindgen"]
link_vulkan=[]
recording=[]
